# cmake

./: CMakeLists.txt
calc/: CMakeLists.txt  div.cpp  mult.cpp  sub.cpp
data/: english.txt
include/: socket.h  sort.h
sort/: CMakeLists.txt  insert.cpp  select.cpp
src/: CMakeLists.txt  div.cpp  main.cpp  mult.cpp  socket.cpp  sub.cpp
test1/: CMakeLists.txt  calc.cpp
test2/: CMakeLists.txt  sort.cpp
tests/: CMakeLists.txt
tests/client/: CMakeLists.txt  client.cpp
tests/server/: CMakeLists.txt  server.cpp
